k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-app
  name: demo-app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: demo-app
© 2020 GitHub, Inc.
