k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  host: demo-app-pipeline-demo.apps.ctscluster01.niandc.org
  port:
    targetPort: 9080
  to:
    kind: Service
    name: demo-app
    weight: 100
